feat: chamando env corretamente no express.js

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/postcss": "^4.0.7",
     "axios": "^1.2.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "http-proxy-middleware": "^3.0.3",
     "quasar": "^2.16.0",
