feat: ajustando configurações compatíveis com para permissão de cors

--- a/docker/default.conf
+++ b/docker/default.conf
@@ -7,37 +7,20 @@ server {
         root /usr/share/nginx/html;
         index index.html;
         try_files $uri $uri/ /index.html;
-
-        # Configuração do CORS para o frontend
-        add_header 'Access-Control-Allow-Origin' '*';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
-        add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization';
-        add_header 'Access-Control-Allow-Credentials' 'true';
     }
 
-    # Configuração para o proxy (backend)
-    location /api/ {
-        proxy_pass http://10.23.6.12:8000/;
+    # Configuração para redirecionar requisições /api para o Express
+    location /api {
+        proxy_pass http://127.0.0.1:8000;  # Redireciona para o Express
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # Configuração do CORS para o backend
+        # Configuração do CORS para o backend (opcional, já que o Express já lida com CORS)
         add_header 'Access-Control-Allow-Origin' '*';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
         add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization';
         add_header 'Access-Control-Allow-Credentials' 'true';
-
-        # Lidar com requisições OPTIONS (pré-voo)
-        if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization';
-            add_header 'Access-Control-Max-Age' 1728000; # Cache por 20 dias
-            add_header 'Content-Type' 'text/plain; charset=utf-8';
-            add_header 'Content-Length' 0;
-            return 204;
-        }
     }
 }
